Modified pardner handling to allow a player to provide an invitation message when they invite someone to be their pardner and to explain pardnership a bit in the "you received a pardner invite" dialog.